core/public/stylesheets/refinery/refinery.css
/* ... */
a.information:hover {
  background: #22a7f2;
}

/* dubiously in here */
.current_image_link {
  display: inline-block;
  width: auto;
}

/* cornering */
.button, #editor_switch a, #editor_switch span {
  border-radius: 6px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
}
#page_container, .wym_box {
  border-radius-bottom: 5px;
  -moz-border-radius-bottomleft: 5px;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-left-radius: 5px;
  -webkit-border-bottom-right-radius: 5px;
}
.wym_iframe iframe {
  border-radius-bottom: 2px;
  -moz-border-radius-bottomleft: 2px;
  -moz-border-radius-bottomright: 2px;
  -webkit-border-bottom-left-radius: 2px;
  -webkit-border-bottom-right-radius: 2px;
}
.form-actions {
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}
.form-actions.form-actions-dialog {
  border-radius: 0px;
  -moz-border-radius: 0px;
  -webkit-border-radius: 0px;
}
#menu > a {
  border-radius-top: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
}
.ui-tabs .ui-state-default a {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  -moz-border-radius-topleft: 5px;
  -moz-border-radius-topright: 5px;
  -webkit-border-top-left-radius: 5px;
  -webkit-border-top-right-radius: 5px;
}
.tooltip, .tooltip span {
  border-radius: 6px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
}

/* Internet Explorer to follow: */
/* IE 7 */
.ie7 #content .form-actions .form-actions-left a.button {
  height: 19px;
  line-height: 19px;
  padding-top: 3px;
  padding-bottom: 3px;
}
.ie7 .search_form input.button {
  padding-left: 8px;
  padding-right: 8px;
}
.ie7 body.login .field input.larger, .ie7 body.login .field input.larger:focus {
  background-image: none !important;
  padding: 0px;
  line-height: 30px;
}
.ie7 .pagination a, .ie7 #content .pagination a, .ie7 .pagination .current, .ie7 .disabled, .ie7 .pagination em {
  padding-bottom: 6px;
}
.ie7 .pt-BR #search {
  width: 177px;
}
.ie7 .en #search {
  width: 200px;
}

/* IE 8 */
.ie8 body.login .field input.larger, .ie8 body.login .field input.larger:focus {
  line-height: 30px;
}
.ie8 .pagination a, .ie8 #content .pagination a, .ie8 .pagination .current, .ie8 .disabled, .ie8 .pagination em {
  padding-bottom: 6px;
}


/* Additional styles for custom backend additions - where should these go? */
section#items {
  width: 600px;
}
.page_part {
  padding: 5px 10px;
  background-color: #eee;
}
.items {
  width: 67%;
}

#actions li {
  position: relative;
}
#actions li a.remove_item {
  background: none; padding: 0; border: 0;
  position: absolute;
  right: 10px; top: 10px;
}

.part_items_controls {
  height: 30px;
}
.part_items_controls a {
  display: block;
  position: relative;
  padding-right: 20px;
  padding-left: 23px;
  padding-top: 4px;
}
.part_items_controls a img {
  position: absolute;
  top: 3px; left: 3px;
}

#page-tabs .placeholder {
  list-style-type: none;float: left;
}

ul.items {
  list-style-type: none;
  padding: 0; margin: 7px 0 0;
}

ul.items .item.record {
  margin-bottom: 10px;
}

ul.items .item.record .record_header {
  padding: 9px;
  background: #ddd;
  border: 1px solid #888;
}

ul.items .item.record .record_header .record_controls {
  float: right;
}

ul.items .item.record .record_fields {
  display: block;
  background: #FEFEFE;
  margin: 0;
  padding: 1px 10px 20px;
  border: 1px solid #CCC;
  border-top: none;
}
.user_list {
  padding: 5px;
  width: 100%;
  max-height: 200px;
  overflow-y: auto;
  border: 1px solid #ccc;
  background: #fefefe;
}
#content .part_items_controls li a {
  border: 1px solid #65C3F7;
}


.add_item_dialog table {
  width: 100%;
  border-collapse:collapse;
  border-spacing: 0;
}
.add_item_dialog table td, .add_item_dialog table th {
  padding: 2px 5px 1px;
  line-height: 28px;
}
.add_item_dialog table thead th {
  text-align: left;
  background: #dedede;
  border-bottom: 1px solid #555;
}
.add_item_dialog table td {
  background: #efefef;
  border-bottom: 1px solid #aaa;
}
.add_item_dialog .form-actions-dialog {
  background: #eee;
  position: absolute;
  padding: 5px;
  width: 590px;
  bottom: 0;
  left: 0;
  border-top: 2px solid #999;
}

